--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="main-main">
       <div class="main">
         <h3>Welcome to EV Attendance</h3>
-        <button><a href="./register">Register</a></button>
-        <button><a href="./login">Login</a></button>
+        <button><a href="https://charankasa07.github.io/EV-Attendance/register">Register</a></button>
+        <button><a href="https://charankasa07.github.io/EV-Attendance/login">Login</a></button>
       </div>
     </div>
   </body>
